Fix error where visibility icons weren't showing in the recent projects dropdown, and rescope navbar padding so the li padding for the top nav doesn't apply to the dropdown items.

--- a/perforce_swarm/app/assets/stylesheets/perforce_swarm/navbar.scss
+++ b/perforce_swarm/app/assets/stylesheets/perforce_swarm/navbar.scss
@@ -61,7 +61,7 @@ header.navbar-gitlab .navbar-inner {
 
   /* Center and properly size the nav area */
   .nav {
-    li {
+    > li {
       > a {
         padding: 6px 14px;
 
